[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/Hazards/HazardPath/HazardPath.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="HazardPath" type="Path2D"]
curve = null
script = ExtResource( 1 )
hazard_speed = 250.0

[node name="PointA" type="Position2D" parent="."]

[node name="icon2" type="Sprite" parent="PointA"]
visible = false
texture = ExtResource( 2 )

[node name="PointB" type="Position2D" parent="."]

[node name="icon" type="Sprite" parent="PointB"]
visible = false
texture = ExtResource( 2 )

[node name="ThirdLine" type="Line2D" parent="."]
visible = false
default_color = Color( 1, 1, 1, 1 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 5.0

[node name="SecondLine" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.580392 )
self_modulate = Color( 1.1, 1.1, 1.1, 1 )
width = 12.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 5.0

[node name="CenterLine" type="Line2D" parent="."]
width = 3.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 5.0

[node name="PathFollow" type="PathFollow2D" parent="."]
